--- a/style.css
+++ b/style.css
@@ -65,13 +65,13 @@ nav ul li a:hover, a.active{
 .inp-width{
     min-width: 300px;
 }
-.plus-minus-btn{
+/* .plus-minus-btn{
     color: #3352F2;
     font-size: 30px;
     padding: 2px;
     margin-top: 10px;
     word-spacing: 20px;
-}
+} */
 .booking-form  .calculations{
     margin: 10px 0;
 }
